fix(storefront): BCTHEME-211 Cross icon on close button missalignment

--- a/assets/scss/components/foundation/modal/_modal.scss
+++ b/assets/scss/components/foundation/modal/_modal.scss
@@ -82,10 +82,6 @@
     }
 
     @include addFocusTooltip;
-
-    &__aria-text {
-        font-size: 0;
-    }
 }
 
 .modal-body {
